<resources>
    <string name="app_name">TODO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Calendar</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>

    <string name="home_second">Home Second</string>
    <string name="add">Add</string>
    <string name="username">Username</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="description">Description</string>
    <string name="important">Important</string>
    <string name="title">Title</string>
</resources>
